@startuml
skinparam classAttributeIconSize 0

title Audio Synthesizer

'=========================
' Interfaces
'=========================

interface AudioChannel {
    +generate(song: Song, duration: Double): DoubleArray
    +getDuration(song: Song): Double
    +getNoteBoundaries(song: Song): List<Triple<Int,Int,Int>>
}

interface Waveform {
    +generate(frequency: Double, sampleRate: Int, phase: Double): Double
}

'=========================
' Core Classes
'=========================

class Song {
    +sampleRate : Int
    +beatsPerMeasure : Int
    +tempo : Int
    +channels : List<AudioChannel>
}

class SoundChannel {
    -waveform : Waveform
    -measures : List<String>
}

class SoundSynthesis {
    -song : Song
    +synthesize() : DoubleArray
    +play() : Unit
}

class NoteFrequency {
    +frequency(note:String) : Double?
}

'=========================
' Decorators
'=========================

class VolumeDecorator {
    -channel : AudioChannel
    -level : Double
}

class AttackDecaySustainDecorator {
    -channel : AudioChannel
    -attackEnd : Double
    -decayEnd : Double
    -sustain : Double
}

class ClipDistortionDecorator {
    -channel : AudioChannel
    -threshold : Double
}

class TanhDistortionDecorator {
    -channel : AudioChannel
    -drive : Double
}

'=========================
' Strategy Pattern
'=========================

class SineWaveStrategy
class SquareWaveStrategy
class SawWaveStrategy
class WhiteNoiseStrategy

'=========================
' Factories
'=========================

class WaveformFactory <<factory>> {
    +create(type:String) : Waveform
}

class EffectFactory <<factory>> {
    +create(effect:String, channel:AudioChannel) : AudioChannel
}

'=========================
' Relationships
'=========================

Song "1" o-- "*" AudioChannel

SoundSynthesis --> Song

SoundChannel ..|> AudioChannel
SoundChannel --> Waveform
SoundChannel --> NoteFrequency

VolumeDecorator ..|> AudioChannel
AttackDecaySustainDecorator ..|> AudioChannel
ClipDistortionDecorator ..|> AudioChannel
TanhDistortionDecorator ..|> AudioChannel

VolumeDecorator --> AudioChannel : decorates
AttackDecaySustainDecorator --> AudioChannel : decorates
ClipDistortionDecorator --> AudioChannel : decorates
TanhDistortionDecorator --> AudioChannel : decorates

WaveformFactory ..> Waveform
EffectFactory ..> AudioChannel

SineWaveStrategy ..|> Waveform
SquareWaveStrategy ..|> Waveform
SawWaveStrategy ..|> Waveform
WhiteNoiseStrategy ..|> Waveform

note right of Waveform
<<Strategy>>
end note

note right of AudioChannel
<<Decorator>>
end note

@enduml